syntax = "proto3";

option csharp_namespace = "FashionShop.ProductService.Protos";
service SyncQuantity{
	rpc SyncQuantityFromProduct(InventoryRequest) returns (ProductRespone);
}
 message InventoryRequest{

 }
 message ProductRespone{
	 string ProductId = 1;
	 int32 Quantity = 2;
 }